# rust-zeppelin

./: Cargo.toml  README.md
db_dump/: init.sh
db_dump/dump/zeppelin/: notebooks.bson  notebooks.metadata.json  paragraphs.bson  paragraphs.metadata.json
src/: main.rs
