[package]
name = "rust-zeppelin"
version = "0.1.0"
authors = ["sravan <sravans2011@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
warp = "0.1"
juniper = "0.14.1"
mongodb = "0.4.0"
bson = "0.14.0"
serde = "1.0.103"
serde_derive = "1.0.103"
serde_json = "1.0.44"
